# CODE-REVIEW-AGENT

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: env.py  graders.py  main.py  models.py
app/data/: bugs.json
server/: app.py
