[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-review-agent"
version = "1.0.0"
description = "OpenEnv environment for AI code review agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[project.urls]
Homepage = "https://huggingface.co/spaces/Yellow02/CODE-REVIEW-AGENT"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]

[openenv]
name = "code-review-agent"
version = "1.0.0"
tasks = ["easy", "medium", "hard"]
reset_endpoint = "/reset"
step_endpoint = "/step"
state_endpoint = "/state"
base_url = "https://yellow02-code-review-agent.hf.space"